topsoil/support/test/tests/derive_no_bound_ui/eq.stderr
error[E0277]: can't compare `Foo<T>` with `Foo<T>`
 --> tests/derive_no_bound_ui/eq.rs:23:8
  |
 23 | struct Foo<T: Config> {
    |        ^^^^^^^^^^^^^^ no implementation for `Foo<T> == Foo<T>`
    |
help: the trait `PartialEq` is not implemented for `Foo<T>`
   --> tests/derive_no_bound_ui/eq.rs:23:1
    |
 23 | struct Foo<T: Config> {
    | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `std::cmp::Eq`
   --> $RUST/core/src/cmp.rs
    |
    | pub const trait Eq: [const] PartialEq<Self> + PointeeSized {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Eq`
